--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,9 @@
   },
   "dependencies": {
     "@prisma/client": "^6.2.1",
-    "express": "^4.21.2"
+    "bcryptjs": "^2.4.3",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "jsonwebtoken": "^9.0.2"
   }
 }
