--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@google/generative-ai": "^0.21.0",
     "@prisma/client": "^6.2.1",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-session": "^1.18.1",
